@@ -4,7 +4,7 @@
       "Brian M. Kelly <Brian.Kelly@fullautosoftware.net>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "CPAN::Meta::Converter version 2.112621, CPAN::Meta::Converter version 2.112621",
+   "generated_by" : "CPAN::Meta::Converter version 2.120351, CPAN::Meta::Converter version 2.120351",
    "license" : [
       "unknown"
    ],
@@ -21,40 +21,40 @@
       },
       "runtime" : {
          "recommends" : {
-            "Crypt::Rijndael" : 0
+            "Crypt::Rijndael" : "0"
          },
          "requires" : {
-            "B::Utils" : 0,
-            "CHI" : 0,
-            "Cache::Cache" : 0,
-            "Capture::Tiny" : 0,
-            "Crypt::CBC" : 0,
-            "Crypt::DES" : 0,
-            "Data::Password::Check" : 0,
-            "Digest::MD5" : 0,
-            "Digest::SHA" : 0,
-            "Email::Sender" : 0,
-            "ExtUtils::CBuilder" : 0,
-            "ExtUtils::Depends" : 0,
+            "B::Utils" : "0",
+            "CHI" : "0",
+            "Cache::Cache" : "0",
+            "Capture::Tiny" : "0",
+            "Crypt::CBC" : "0",
+            "Crypt::DES" : "0",
+            "Data::Password::Check" : "0",
+            "Digest::MD5" : "0",
+            "Digest::SHA" : "0",
+            "Email::Sender" : "0",
+            "ExtUtils::CBuilder" : "0",
+            "ExtUtils::Depends" : "0",
             "ExtUtils::MakeMaker" : "6.59",
-            "HTTP::Date" : 0,
-            "IO::Capture::Stderr" : 0,
-            "IO::Pty" : 0,
+            "HTTP::Date" : "0",
+            "IO::Capture::Stderr" : "0",
+            "IO::Pty" : "0",
             "JSON" : "2.14",
-            "MIME::Entity" : 0,
+            "MIME::Entity" : "0",
             "Module::Build" : "0.3601",
-            "Module::Load::Conditional" : 0,
-            "Net::Telnet" : 0,
-            "PPI" : 0,
-            "Sort::Versions" : 0,
-            "String::Random" : 0,
-            "Task::Weaken" : 0,
-            "Term::RawInput" : 0,
-            "Term::ReadKey" : 0,
-            "Test::Deep" : 0,
-            "Tie::Cache" : 0,
-            "URI" : 0,
-            "YAML" : 0,
+            "Module::Load::Conditional" : "0",
+            "Net::Telnet" : "0",
+            "PPI" : "0",
+            "Sort::Versions" : "0",
+            "String::Random" : "0",
+            "Task::Weaken" : "0",
+            "Term::RawInput" : "0",
+            "Term::ReadKey" : "0",
+            "Test::Deep" : "0",
+            "Tie::Cache" : "0",
+            "URI" : "0",
+            "YAML" : "0",
             "perl" : "5.006"
          }
       }
@@ -62,55 +62,55 @@
    "provides" : {
       "Bad_Handle" : {
          "file" : "lib/Net/FullAuto/FA_Core.pm",
-         "version" : 0
+         "version" : "0"
       },
       "File_Transfer" : {
          "file" : "lib/Net/FullAuto/FA_Core.pm",
-         "version" : 0
+         "version" : "0"
       },
       "Net::FullAuto" : {
          "file" : "lib/Net/FullAuto.pm",
-         "version" : "0.99999940"
+         "version" : "0.99999941"
       },
       "Net::FullAuto::FA_Core" : {
          "file" : "lib/Net/FullAuto/FA_Core.pm",
-         "version" : 0
+         "version" : "0"
       },
       "Net::FullAuto::FA_DB" : {
          "file" : "lib/Net/FullAuto/FA_Core.pm",
-         "version" : 0
+         "version" : "0"
       },
       "Net::FullAuto::Getline" : {
          "file" : "lib/Net/FullAuto/FA_Core.pm",
-         "version" : 0
+         "version" : "0"
       },
       "Net::FullAuto::MemoryHandle" : {
          "file" : "lib/Net/FullAuto/FA_Core.pm",
-         "version" : 0
+         "version" : "0"
       },
       "Rem_Command" : {
          "file" : "lib/Net/FullAuto/FA_Core.pm",
-         "version" : 0
+         "version" : "0"
       },
       "fa_code" : {
          "file" : "lib/Net/FullAuto/Distro/fa_code.pm",
-         "version" : 0
+         "version" : "0"
       },
       "fa_conf" : {
          "file" : "lib/Net/FullAuto/Distro/fa_conf.pm",
-         "version" : 0
+         "version" : "0"
       },
       "fa_host" : {
          "file" : "lib/Net/FullAuto/Distro/fa_host.pm",
-         "version" : 0
+         "version" : "0"
       },
       "fa_maps" : {
          "file" : "lib/Net/FullAuto/Distro/fa_maps.pm",
-         "version" : 0
+         "version" : "0"
       },
       "fa_menu" : {
          "file" : "lib/Net/FullAuto/Distro/fa_menu.pm",
-         "version" : 0
+         "version" : "0"
       }
    },
    "release_status" : "stable",
@@ -119,5 +119,5 @@
          "http://opensource.org/licenses/gpl-3.0.html"
       ]
    },
-   "version" : "0.99999940"
+   "version" : "0.99999941"
 }
