@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999940';
+our $VERSION='0.99999941';
 
 
 use 5.005;
